--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    /*background-image: url("https://cdn.stocksnap.io/img-thumbs/960w/ANC5ACJ7V0.jpg");*/
+    background-image: url("https://cdn.stocksnap.io/img-thumbs/960w/ANC5ACJ7V0.jpg");
     background-repeat: repeat;
 }
 h1{
