--- a/index.css
+++ b/index.css
@@ -1,15 +1,15 @@
 *{
     text-align: center;
-    font-family: 'Anton', sans-serif;
-    font-size: 30px;
+    font-family: 'Oswald', sans-serif;
+    font-size: 15px;
 }
 
 body{
-    background-image: url("https://cdn.stocksnap.io/img-thumbs/960w/ANC5ACJ7V0.jpg");
+    background-image: url("https://cdn.pixabay.com/photo/2016/11/22/23/03/hardwood-1851071_960_720.jpg");
     background-repeat: repeat;
 }
 h1{
-    font-size: 38px;
+    font-size: 22px;
 }
 
 .main-div{
@@ -20,6 +20,7 @@ h1{
     border-radius: 5px;
     padding-left: 12px;
     padding-right: 12px;
+    background-color: papayawhip;
 }
 
 
@@ -36,7 +37,7 @@ h1{
 }
 
 .result{
-    font-size: 20px;
+    font-size: 12px;
     color: rgb(153, 153, 153);
 }
 
@@ -48,14 +49,35 @@ h1{
     border: none;
 }
 
-.questions *{
+.main-questions *, .answer *{
     display: flex;
     margin-top: 10px;
+    align-items: center;
+}
 
+.buttons {
+    display: flex;
+    justify-content: left;
+}
+
+.buttons *{
+    margin-right: 10px;
 }
 
 
 @media screen and (min-width: 480px){
+    *{
+        font-size: 25px;
+    }
+
+    h1{
+        font-size: 33px;
+    }
+
+    .result{
+        font-size: 18px;
+        color: rgb(153, 153, 153);
+    }
     .mobile{
         display: none;
     }
@@ -68,6 +90,19 @@ h1{
 
 
 @media screen and (min-width: 768px){
+    *{
+        font-size: 30px;
+    }
+
+    h1{
+        font-size: 38px;
+    }
+
+    .result{
+        font-size: 20px;
+        color: rgb(153, 153, 153);
+    }
+
     .tablet{
         display: none;
     }
