--- a/index.css
+++ b/index.css
@@ -49,7 +49,7 @@ h1{
     border: none;
 }
 
-.main-questions *, .answer *{
+.main-questions *{
     display: flex;
     margin-top: 10px;
     align-items: center;
