--- a/index.css
+++ b/index.css
@@ -2,35 +2,52 @@
     text-align: center;
     font-family: 'Oswald', sans-serif;
     font-size: 15px;
+    transition: ease;
 }
 
 body{
-    background-image: url("https://cdn.pixabay.com/photo/2016/11/22/23/03/hardwood-1851071_960_720.jpg");
-    background-repeat: repeat;
+    /**background-image: url("https://cdn.pixabay.com/photo/2016/11/22/23/03/hardwood-1851071_960_720.jpg");
+    background-repeat: repeat;*/
+    background-color: lightskyblue;
+    background-image: linear-gradient(lightskyblue, rgb(203, 232, 250));
+    background-repeat: space;
+    height: 100vh;
 }
 h1{
     font-size: 22px;
 }
 
 .main-div{
-    
     padding: 5%;
 }
+
 .button{
     border-radius: 5px;
+    border: none;
     padding-left: 12px;
     padding-right: 12px;
-    background-color: papayawhip;
+    padding-bottom: 5px;
+    background-color: rgb(65, 187, 228);
+    color: white;
+    transition: background-color 0.5s ease;
+    box-shadow: 1px 1px 3px lightgray;
 }
 
 
 .opaque-background{
-    background: rgba(44, 37, 37, 0.7);
-    color: rgb(228, 228, 228);
-    border-radius: 6px;
+    background: whitesmoke;
+    color: rgb(0, 0, 0);
+    border-radius: 10px;
     margin-left: 10%;
     margin-right: 10%;
+    box-shadow: 1px 1px 5px gray;
+    background-image: linear-gradient(white, rgb(219, 245, 255));
+    background-repeat: repeat;
 }
+
+.button:hover {
+    background-color: rgb(88, 151, 172);
+  }
 
 .progress{
     margin-bottom: 10px;
